tests/src/frontend/typechecking/invalid/inherit_params_dupe_inherited.sk
base class MyParent(x: Int, y: String) {}
base class MyParent2(x: Bool, y: Bool) {}
class Child extends MyParent, MyParent2
